Add login/logout and register

--- a/SNUSProjekat/DatabaseManager/App.config
+++ b/SNUSProjekat/DatabaseManager/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IAuthentication" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:58413/Core.svc/Authenticate"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAuthentication"
+                contract="ServiceReference.IAuthentication" name="BasicHttpBinding_IAuthentication" />
+        </client>
+    </system.serviceModel>
 </configuration>
