Add Database Service

--- a/SNUSProjekat/DatabaseManager/App.config
+++ b/SNUSProjekat/DatabaseManager/App.config
@@ -7,12 +7,16 @@
         <bindings>
             <basicHttpBinding>
                 <binding name="BasicHttpBinding_IAuthentication" />
+                <binding name="BasicHttpBinding_IDatabaseManager" />
             </basicHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:58413/Core.svc/Authenticate"
+            <endpoint address="http://localhost:58413/DatabaseManager.svc/Authenticate"
                 binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAuthentication"
                 contract="ServiceReference.IAuthentication" name="BasicHttpBinding_IAuthentication" />
+            <endpoint address="http://localhost:58413/DatabaseManager.svc/DBManager"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IDatabaseManager"
+                contract="ServiceReference.IDatabaseManager" name="BasicHttpBinding_IDatabaseManager" />
         </client>
     </system.serviceModel>
 </configuration>
