--- a/SNUSProjekat/SNUSProjekat/Web.config
+++ b/SNUSProjekat/SNUSProjekat/Web.config
@@ -13,8 +13,9 @@
   </system.web>
   <system.serviceModel>
     <services>
-      <service name="SNUSProjekat.Core">
+      <service name="SNUSProjekat.DatabaseManager">
         <endpoint contract="SNUSProjekat.IAuthentication" binding="basicHttpBinding" address="/Authenticate"/>
+        <endpoint contract="SNUSProjekat.IDatabaseManager" binding="basicHttpBinding" address="/DBManager"/>
       </service>
     </services>
     <behaviors>
