--- a/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
+++ b/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
@@ -71,12 +71,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Core.svc" />
+    <Content Include="DatabaseManager.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core.svc.cs">
-      <DependentUpon>Core.svc</DependentUpon>
+    <Compile Include="DatabaseManager.svc.cs">
+      <DependentUpon>DatabaseManager.svc</DependentUpon>
     </Compile>
     <Compile Include="IAuthentication.cs" />
     <Compile Include="IDatabaseManager.cs" />
@@ -84,6 +84,7 @@
     <Compile Include="ITrendingCallback.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tag.cs" />
+    <Compile Include="TagProcessing.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
