Rework TagProcessing and DatabaseManager

--- a/SNUSProjekat/SNUSProjekat/Web.config
+++ b/SNUSProjekat/SNUSProjekat/Web.config
@@ -17,6 +17,9 @@
         <endpoint contract="SNUSProjekat.IAuthentication" binding="basicHttpBinding" address="/Authenticate"/>
         <endpoint contract="SNUSProjekat.IDatabaseManager" binding="basicHttpBinding" address="/DBManager"/>
       </service>
+      <service name="SNUSProjekat.TrendingService">
+        <endpoint contract="SNUSProjekat.ITrending" binding="wsDualHttpBinding" address="/Trending"></endpoint>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
