--- a/SNUSProjekat/Trending/App.config
+++ b/SNUSProjekat/Trending/App.config
@@ -3,4 +3,20 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_ITrending" />
+            </wsDualHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:58413/TrendingService.svc/Trending"
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_ITrending"
+                contract="ServiceReference.ITrending" name="WSDualHttpBinding_ITrending">
+                <identity>
+                    <userPrincipalName value="DESKTOP-KPVA06T\Zoran Bukorac" />
+                </identity>
+            </endpoint>
+        </client>
+    </system.serviceModel>
 </configuration>
