--- a/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
+++ b/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="DatabaseManager.svc" />
+    <Content Include="TrendingService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -83,8 +84,12 @@
     <Compile Include="ITrending.cs" />
     <Compile Include="ITrendingCallback.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimulationDriver.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagProcessing.cs" />
+    <Compile Include="TrendingService.svc.cs">
+      <DependentUpon>TrendingService.svc</DependentUpon>
+    </Compile>
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
