Add report Manager

--- a/SNUSProjekat/ReportManager/App.config
+++ b/SNUSProjekat/ReportManager/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IReportManagerService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:58413/ReportManagerService.svc/ReportManager"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportManagerService"
+                contract="ServiceReference.IReportManagerService" name="BasicHttpBinding_IReportManagerService" />
+        </client>
+    </system.serviceModel>
 </configuration>
