Add realtime unit

--- a/SNUSProjekat/RTU/App.config
+++ b/SNUSProjekat/RTU/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IRealTimeUnit" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:58413/RealTimeUnitService.svc/RealTimeUnit"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IRealTimeUnit"
+                contract="ServiceReference.IRealTimeUnit" name="BasicHttpBinding_IRealTimeUnit" />
+        </client>
+    </system.serviceModel>
 </configuration>
