--- a/SNUSProjekat/SNUSProjekat/Web.config
+++ b/SNUSProjekat/SNUSProjekat/Web.config
@@ -20,6 +20,15 @@
       <service name="SNUSProjekat.TrendingService">
         <endpoint contract="SNUSProjekat.ITrending" binding="wsDualHttpBinding" address="/Trending"></endpoint>
       </service>
+      <service name="SNUSProjekat.AlarmDisplayService">
+        <endpoint contract="SNUSProjekat.IAlarmDisplay" binding="wsDualHttpBinding" address="/AlarmDisplay"></endpoint>
+      </service>
+      <service name="SNUSProjekat.RealTimeUnitService">
+        <endpoint contract="SNUSProjekat.IRealTimeUnit" binding="basicHttpBinding" address="/RealTimeUnit"></endpoint>
+      </service>
+      <service name="SNUSProjekat.ReportManagerService">
+        <endpoint contract="SNUSProjekat.IReportManagerService" binding="basicHttpBinding" address="/ReportManager"></endpoint>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
