--- a/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
+++ b/SNUSProjekat/SNUSProjekat/SNUSProjekat.csproj
@@ -71,19 +71,37 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AlarmDisplayService.svc" />
     <Content Include="DatabaseManager.svc" />
+    <Content Include="RealTimeUnitService.svc" />
+    <Content Include="ReportManagerService.svc" />
     <Content Include="TrendingService.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alarm.cs" />
+    <Compile Include="AlarmDisplayService.svc.cs">
+      <DependentUpon>AlarmDisplayService.svc</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseManager.svc.cs">
       <DependentUpon>DatabaseManager.svc</DependentUpon>
     </Compile>
+    <Compile Include="IAlarmDisplay.cs" />
+    <Compile Include="IAlarmDisplayCallback.cs" />
     <Compile Include="IAuthentication.cs" />
     <Compile Include="IDatabaseManager.cs" />
+    <Compile Include="IRealTimeUnit.cs" />
+    <Compile Include="IReportManagerService.cs" />
     <Compile Include="ITrending.cs" />
     <Compile Include="ITrendingCallback.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RealTimeDriver.cs" />
+    <Compile Include="RealTimeUnitService.svc.cs">
+      <DependentUpon>RealTimeUnitService.svc</DependentUpon>
+    </Compile>
+    <Compile Include="ReportManagerService.svc.cs">
+      <DependentUpon>ReportManagerService.svc</DependentUpon>
+    </Compile>
     <Compile Include="SimulationDriver.cs" />
     <Compile Include="Tag.cs" />
     <Compile Include="TagProcessing.cs" />
